fixed button alignment

--- a/css/style.css
+++ b/css/style.css
@@ -181,12 +181,24 @@ background-size: contain;
   height: 70px;
 }
 .banner-content .cicle-bg {
-  width: 200px;
+  width: 50%;
 }
 #banner .banner-content h1 {
   font-size: 3rem;
 }
+.button-box, .btn {
+  gap: 5px;
+}
 
+.button-box .btns {
+  border-radius: 1000px;
+color: var(--secoundery);
+background: transparent;
+padding: 10px 16px;
+font-size: 14px;
+font-weight: 600;
+border: 1px solid #00FF88;
+}
 
 }
 
